# tictactoe

./: .clang-tidy  .gitignore  CMakeLists.txt  CMake_cheatsheet.md  Duthomhas.cpp  README.md  README.mysql  TODO  TODO.md  bitset.cpp  board.cpp  board.h  db1.sql  gsl-lite.hpp  input.h  inputtest.cpp  libmariadb.so.3  main  main.cpp  makefile  mysql.cpp  play_game.cpp  play_game.h  player.cpp  player.h  span.hpp  stringsearchtest.cpp  testmysql  tests.cpp  tests.h  tests.txt  tictactoe  tictactoe.code-workspace
include/: RandomNumberGenerator.h  board.h  player.h
src/: CMakeLists.txt  board.cpp  play_game.cpp  player.cpp  randomnumbergenerator.cpp
tests/: CMakeLists.txt  NOTES.md  board_unittests.cpp  input_unittests.cpp  io_redirects.cpp  io_redirects.h  play_game_unittests.cpp  player_unittests.cpp  randomnumbergenerator_unittests.cpp  test  test_game_positions.cpp
